--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+
+    <h1>Alejandro Machaca Villena</h1>
     <div class="contenedor">
         <div class="caja-1">
             1
@@ -20,7 +22,7 @@
             3
         </div>
 
-        <div class="caja-4">
+        <!--<div class="caja-4">
             4
         </div>
 
@@ -30,7 +32,7 @@
 
         <div class="caja-6">
             6
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
